<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DriveMeHomeOnTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_customer_employee">RegisterCustomerEmployee</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State (2 letters)</string>
    <string name="zip">Zip Code</string>
    <string name="phone">Phone 10 digits</string>
    <string name="email">E-mail</string>
    <string name="license">Drivers License</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="private_driver">Private Driver</string>
    <string name="submit">Submit</string>

</resources>
